# gaelCareBot

./: .dockerignore  .env.example  .gitallowed  .gitignore  AGENTS.md  Dockerfile  Dockerfile.sqlite-web  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  deploy.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: f1-plan-compliance.txt  f2-code-quality-review.txt  f3-edge-50plus-entries.txt  f3-edge-empty-db.txt  f3-edge-xss-username.txt  f3-final-verdict.txt  f3-full-test-suite.txt  f3-integration-test.txt  f3-t1-html-bold.txt  f3-t1-no-backticks.txt  f3-t1-no-markdown-bold.txt  f3-t2-empty-state.txt  f3-t2-html-escapes.txt  f3-t2-html-parse-mode.txt  f3-t2-pre-tags.txt  f3-t2-three-columns.txt  f3-t3-parse-mode.txt  f3-t4-no-markdown-left.txt  f3-t4-parse-mode.txt  f4-scope-fidelity-check.md  final-f1-tests.txt  final-f2-regression.txt  final-f4-diff.txt  grep_deleted_at.txt  qa_consumed_at_migration.txt  task-1-backup-integrity.txt  task-1-backup-verified.txt  task-1-blob-purged.txt  task-1-dirs.txt  task-1-gaelcarebot-unchanged.txt  task-1-messages-tests.txt  task-1-migration-existing.txt  (+56 more)
docs/: vps-setup.md
gaelcarebot/: AGENTS.md  auth.py  bot.py  config.py  db.py  group_notifier.py  messages.py
scripts/: seed.py
src/: AGENTS.md  auth.py  bot.py  db.py  messages.py
tests/: conftest.py  test_add.py  test_agregar.py  test_consume.py  test_consumir.py  test_db.py  test_edit.py  test_editar.py  test_eliminar.py  test_help.py  test_messages.py  test_stock.py  test_total.py
(+23 files in other folders)
