[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gaelcarebot"
dynamic = ["version"]
description = "Telegram bot for tracking breast milk stock"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "GaelCareBot Team"},
]
dependencies = [
    "python-telegram-bot >=20.0,<21.0",
    "pytz",
    "python-dotenv",
]

[project.urls]
Repository = "https://github.com/your-org/gaelcarebot"

[project.scripts]
gaelcarebot = "gaelcarebot.bot:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["gaelcarebot*"]

[tool.setuptools.dynamic]
version = {attr = "gaelcarebot.__version__"}
